Add logo asset, add headlines to dialogs

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -306,6 +306,13 @@
 .archetypeConfig {
     margin-bottom: 20px;
 
+    .archetype-headline {
+
+        img {
+            margin-right: 5px;
+        }
+    }
+
     ul {
         list-style: none;
     }
