Add dll version to the config page

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -311,6 +311,14 @@
         img {
             margin-right: 5px;
         }
+
+        small {
+            margin-left: 5px;
+        }
+    }
+
+    .manual-link {
+        color: blue;
     }
 
     ul {
