--- a/app/views/archetype.config.stylescript.dialog.html
+++ b/app/views/archetype.config.stylescript.dialog.html
@@ -1,3 +1,4 @@
+{{VERSION_HTML}}
 <div class="umb-dialog archetype-dialog archetypeConfig" ng-controller="ArchetypeConfigOptionsController">
     <div class="umb-dialog-body archetypeAdvancedOptions" auto-scale="90">
         <h3><archetype-localize key="custom_style_script_options">Custom Style/Script Options</archetype-localize></h3>
