--- a/app/views/archetype.config.fieldset.dialog.html
+++ b/app/views/archetype.config.fieldset.dialog.html
@@ -1,3 +1,4 @@
+{{VERSION_HTML}}
 <div class="umb-dialog archetype-dialog archetypeConfig" ng-controller="ArchetypeConfigOptionsController">
     <div class="umb-dialog-body archetypeAdvancedOptions" auto-scale="90">
         <h3><archetype-localize key="global_fieldset_options">Global Fieldset Options</archetype-localize></h3>
