--- a/app/views/archetype.config.stylescript.dialog.html
+++ b/app/views/archetype.config.stylescript.dialog.html
@@ -1,6 +1,6 @@
 {{VERSION_HTML}}
-<div class="umb-dialog archetype-dialog archetypeConfig" ng-controller="ArchetypeConfigOptionsController">
-    <div class="umb-dialog-body archetypeAdvancedOptions" auto-scale="90">
+<div class="umb-panel archetype-dialog archetypeConfig" ng-controller="ArchetypeConfigOptionsController">
+    <div class="umb-panel-body no-header with-footer umb-scrollable archetypeAdvancedOptions">
         <h3><archetype-localize key="custom_style_script_options">Custom Style/Script Options</archetype-localize></h3>
         <div>
             <label for="archetypeAdvancedOptionsCustomClass"><archetype-localize key="customWrapperClass">Custom Wrapper Class</archetype-localize><small><archetype-localize key="customWrapperClassDescription">(Optional) Enter a custom CSS class that will be applied to the wrapper div.</archetype-localize></small></label>
@@ -18,14 +18,18 @@
             <label for="archetypeAdvancedOptionsCustomView"><archetype-localize key="viewFile">View File</archetype-localize><small><archetype-localize key="viewFileDescription">(Optional) Enter a path for a custom view file to be used to render this Archetype.</archetype-localize></small></label>
             <input type="text" id="archetypeAdvancedOptionsCustomView" ng-model="model.customViewPath"/>
         </div>
-        <div class="btn-toolbar umb-btn-toolbar pull-right">
-            <a href="" ng-click="close()" class="btn btn-link">
-                <localize key="general_cancel" class="ng-isolate-scope ng-scope">Cancel</localize>
-            </a>
+    </div>
+    <div class="umb-panel-footer">
+        <div class="umb-el-wrap umb-panel-buttons">
+            <div class="btn-toolbar umb-btn-toolbar pull-right">
+                <a href="" ng-click="close()" class="btn btn-link">
+                    <localize key="general_cancel" class="ng-isolate-scope ng-scope">Cancel</localize>
+                </a>
 
-            <button class="btn btn-primary" ng-click="apply()">
-                <archetype-localize key="button_apply">Apply</archetype-localize>
-            </button>
+                <button class="btn btn-primary" ng-click="apply()">
+                    <archetype-localize key="button_apply">Apply</archetype-localize>
+                </button>
+            </div>
         </div>
     </div>
 </div>
