Add missing twitter style

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -315,6 +315,14 @@
         small {
             margin-left: 5px;
         }
+        
+        a {
+            float: right;
+            
+            img {
+                width: 35px;
+            }
+        }
     }
 
     .manual-link {
