--- a/app/views/archetype.config.stylescript.dialog.html
+++ b/app/views/archetype.config.stylescript.dialog.html
@@ -22,12 +22,8 @@
     <div class="umb-panel-footer">
         <div class="umb-el-wrap umb-panel-buttons">
             <div class="btn-toolbar umb-btn-toolbar pull-right">
-                <a href="" ng-click="close()" class="btn btn-link">
-                    <localize key="general_cancel" class="ng-isolate-scope ng-scope">Cancel</localize>
-                </a>
-
-                <button class="btn btn-primary" ng-click="apply()">
-                    <archetype-localize key="button_apply">Apply</archetype-localize>
+                <button class="btn" ng-click="apply()">
+                    <archetype-localize key="button_close">Close</archetype-localize>
                 </button>
             </div>
         </div>
