--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -37,28 +37,36 @@
                                 <archetype-submit-watcher active-submit-watcher="activeSubmitWatcher" load-callback="submitWatcherOnLoad" submit-callback="submitWatcherOnSubmit"></archetype-submit-watcher>
                             </div>
                         </div>
-                        <div class="archetypeProperty control-group" ng-show="canConfigure()">
-                            <!-- misc fieldset configuration goes below this line -->
-                            <hr />
-                            <div ng-show="canPublish()">
-                                <label ng-hide="model.config.hidePropertyLabels == '1'" class="control-label">
-                                    <span><archetype-localize key="publish">Publishing</archetype-localize></span>
-                                    <div class="archetypeFieldsetHelpText">
-                                        <small><archetype-localize key="publishHelpText">Configure automatic publishing and/or unpublishing of this item</archetype-localize></small>
-                                    </div>
+                        <div class="control-group archetypeProperty settingsWrapper" ng-show="canConfigure()">
+                            <div ng-click="showSettings = !showSettings" class="settingsHeader">
+                                <span class="caret" ng-show="showSettings"></span>
+                                <span class="caret caret-right" ng-hide="showSettings"></span>
+                                <label>
+                                    <span><archetype-localize key="settings">Settings</archetype-localize></span>
                                 </label>
-                                <div class="publishOptions" ng-class="[(model.config.hidePropertyLabels == '1' ? 'controls-no-label' : 'controls')]">
-                                    <div class="publishDate">
-                                        <label for="{{fieldset.releaseDateModel.alias}}">
-                                            <archetype-localize key="publishReleaseDate">Publish at</archetype-localize>
-                                        </label>
-                                        <umb-editor model="fieldset.releaseDateModel"></umb-editor>
-                                    </div>
-                                    <div class="publishDate">
-                                        <label for="{{fieldset.expireDateModel.alias}}">
-                                            <archetype-localize key="publishExpireDate">Unpublish at</archetype-localize>
-                                        </label>
-                                        <umb-editor model="fieldset.expireDateModel"></umb-editor>
+                            </div>
+                            <div class="settings" ng-show="showSettings">
+                                <!-- misc fieldset settings go here -->
+                                <div ng-show="canPublish()">
+                                    <label ng-hide="model.config.hidePropertyLabels == '1'" class="control-label">
+                                        <span><archetype-localize key="publish">Publishing</archetype-localize></span>
+                                        <div class="archetypeFieldsetHelpText">
+                                            <small><archetype-localize key="publishHelpText">Configure automatic publishing and/or unpublishing of this item</archetype-localize></small>
+                                        </div>
+                                    </label>
+                                    <div class="publishOptions" ng-class="[(model.config.hidePropertyLabels == '1' ? 'controls-no-label' : 'controls')]">
+                                        <div class="publishDate">
+                                            <label for="{{fieldset.releaseDateModel.alias}}">
+                                                <archetype-localize key="publishReleaseDate">Publish at</archetype-localize>
+                                            </label>
+                                            <umb-editor model="fieldset.releaseDateModel"></umb-editor>
+                                        </div>
+                                        <div class="publishDate">
+                                            <label for="{{fieldset.expireDateModel.alias}}">
+                                                <archetype-localize key="publishExpireDate">Unpublish at</archetype-localize>
+                                            </label>
+                                            <umb-editor model="fieldset.expireDateModel"></umb-editor>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
