Allowed member groups PoC

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -333,6 +333,19 @@
         .settings {
             padding: 14px;
             background-color: #f8f8f8;
+
+            .allowedGroups {
+                .umb-membergrouppicker a {
+                    i {
+                        padding-right: 0;
+                        font-size: inherit;
+                    }
+
+                    &:hover i {
+                        color: #333;
+                    }
+                }
+            }
         }
     }
 }
