Prevent dragging when can't add to or remove from list of fieldsets. Allow dragging into an empty list of fieldsets.

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -336,6 +336,12 @@
             overflow: hidden;
         }
     }
+
+    // Necessary to ensure empty lists can be dropped onto when sorting nested fieldsets.
+    .archetypeSortable.archetypeEmpty {
+        min-height: 42px;
+        border: 1px dashed #dddddd;
+    }
 }
 
 .archetypeEditor, .archetypeConfig {
