Tamed a rogue comment.

--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -87,7 +87,7 @@
         </li>
     </ul>
 
-    <!- Fieldset picker. -->
+    <!-- Fieldset picker. -->
     <div class="usky-grid fieldsetPicker" ng-class="{withGroups: overlayMenu.fieldsetGroups.length > 1}" ng-if="overlayMenu.show">
         <div class="cell-tools-menu" ng-style="overlayMenu.style" delayed-mouseleave="closeFieldsetPicker()" archetype-click-outside="closeFieldsetPicker()">
             <h5>
