--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -341,6 +341,7 @@
     .archetypeSortable.archetypeEmpty {
         min-height: 42px;
         border: 1px dashed #dddddd;
+        margin-top: 5px;
     }
 }
 
